[workspace]
resolver = "2"
members = [
    "crates/rainbeam-core",
    "crates/rb",
    "crates/rainbeam",
    "crates/authbeam",
    "crates/databeam",
    "crates/shared",
    "crates/citrus",
    "crates/langbeam",
    "crates/blogbeam-core",
    "crates/blogbeam",
]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
panic = "unwind"
strip = true
