[workspace]
resolver = "3"
members = [
    "crates/rainbeam-core",
    "crates/rb",
    "crates/rainbeam",
    "crates/authbeam",
    "crates/databeam",
    "crates/shared",
    "crates/langbeam",
    "crates/rainbeam-plugins",
    "crates/carp",
]

[profile.dev]
incremental = true

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
# panic = "abort"
panic = "unwind"
strip = true
incremental = true
