[package]
name = "authbeam"
version = "2.0.4"
edition = "2021"
description = "Authentication manager"
authors = ["trisuaso", "swmff"]
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[features]
postgres = ["databeam/postgres"]
mysql = ["databeam/mysql"]
sqlite = ["databeam/sqlite"]
default = ["databeam/sqlite"]    # for development

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
axum-extra = { version = "0.10.0", features = ["cookie", "multipart"] }
regex = "1.11.1"
reqwest = "0.12.12"
hcaptcha-no-wasm = { version = "3.0.1" }
mime_guess = "2.0.5"
citrus-client = { version = "0.1.0" }
rainbeam-shared = { version = "0.2.0" }
databeam = { version = "0.2.6", default-features = false }
# databeam = { path = "../databeam", default-features = false }
image = "0.25.5"
pathbufd = "0.1.4"
# pathbufd = { path = "../../../pathbufd" }

[lib]
doctest = false
