[package]
name = "authbeam"
version = "3.0.0"
edition = "2021"
description = "Authentication manager"
authors = ["trisuaso", "swmff"]
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[features]
postgres = ["databeam/postgres"]
mysql = ["databeam/mysql"]
sqlite = ["databeam/sqlite"]
default = ["databeam/sqlite"]    # for development

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
axum-extra = { version = "0.10.0", features = ["cookie", "multipart"] }
regex = "1.11.1"
reqwest = "0.12.12"
hcaptcha-no-wasm = { version = "3.0.1" }
mime_guess = "2.0.5"
rainbeam-shared = { version = "0.2.0" }
# databeam = { path = "../databeam", default-features = false }
databeam = { version = "0.2.7", default-features = false }
image = "0.25.5"
pathbufd = "0.1.4"
bitflags = "2.8.0"
# pathbufd = { path = "../../../pathbufd" }

[lib]
doctest = false
