[package]
name = "authbeam"
version = "6.0.0"
edition = "2021"
description = "Authentication manager"
authors = ["trisuaso", "swmff"]
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[features]
postgres = ["databeam/postgres"]
mysql = ["databeam/mysql"]
sqlite = ["databeam/sqlite"]
default = ["databeam/sqlite", "redis"] # for development
redis = ["databeam/redis"]
moka = ["databeam/moka"]

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-macros = "0.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
axum-extra = { version = "0.10.0", features = ["cookie", "multipart"] }
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["stream"] }
hcaptcha-no-wasm = { version = "3.0.1" }
mime_guess = "2.0.5"
rainbeam-shared = { version = "1.0.1" }
# databeam = { path = "../databeam", default-features = false }
databeam = { version = "1.0.0", default-features = false }
image = "0.25.5"
pathbufd = "0.1.4"
bitflags = "2.9.0"
# pathbufd = { path = "../../../pathbufd" }
reva = { version = "0.13.2", features = ["with-axum"] }
reva_axum = "0.5.1"
langbeam = { path = "../langbeam" }
totp-rs = { version = "5.6.0", features = ["qr", "gen_secret"] }

[lib]
doctest = false
