[package]
name = "blogbeam-core"
version = "0.1.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Rainbeam blogging"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.81"

[features]
postgres = ["databeam/postgres", "authbeam/postgres", "rainbeam-core/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql", "rainbeam-core/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite", "rainbeam-core/sqlite"]
default = ["databeam/sqlite", "authbeam/sqlite", "rainbeam-core/sqlite"]

[dependencies]
axum = { version = "0.7.5", features = ["macros", "form"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.120"
shared = { path = "../shared" }
databeam = { path = "../databeam", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
rainbeam-core = { path = "../rainbeam-core", default-features = false }
langbeam = { path = "../langbeam" }

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "blogbeam"
test = false
doctest = true
