[package]
name = "blogbeam"
version = "0.1.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Rainbeam blogging"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.81"

[features]
postgres = ["databeam/postgres", "authbeam/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite"]
default = ["databeam/sqlite", "authbeam/sqlite"]

[dependencies]
axum = { version = "0.7.5", features = ["macros", "form"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.120"
shared = { path = "../shared" }
databeam = { path = "../databeam", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
