[package]
name = "citrus-client"
version = "0.1.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Citrus client library"
homepage = "https://github.com/trisuaso/citrus-protocol"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.83"

[dependencies]
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.135"
toml = "0.8.19"
