[package]
name = "databeam"
version = "2.0.1"
edition = "2021"
description = "Database connection library"
authors = ["trisuaso", "swmff"]
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[features]
postgres = []
mysql = []
sqlite = []
redis = ["dep:redis"]
moka = ["dep:moka"]
oysters = ["dep:oysters_client"]
default = ["sqlite", "redis"]

[dependencies]
redis = { version = "0.31.0", optional = true }
moka = { version = "0.12.10", features = ["future"], optional = true }
oysters_client = { version = "0.1.5", default-features = false, optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.22"
rainbeam-shared = "1.0.1"
pathbufd = "0.1.4"

[dependencies.sqlx]
version = "0.8.6"
features = [
    "sqlite",
    "postgres",
    "mysql",
    "any",
    "runtime-tokio",
    "tls-native-tls",
]
