[package]
name = "langbeam"
version = "0.1.2"
edition = "2021"
description = "Rainbeam language file manager"
authors = ["trisuaso", "swmff"]
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[dependencies]
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
rainbeam-shared = "1.0.0"
pathbufd = "0.1.4"
