[package]
name = "langbeam"
version = "1.0.0"
edition = "2021"
description = "Rainbeam language file manager"
authors = ["trisuaso", "swmff"]
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[dependencies]
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
rainbeam-shared = "1.0.1"
pathbufd = "0.1.4"
