[package]
name = "providence"
version = "0.1.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Moderation foresight engine"
homepage = "https://github.com/swmff/rainbeam"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[features]
postgres = ["databeam/postgres", "authbeam/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite"]
default = ["databeam/sqlite", "authbeam/sqlite"]

[dependencies]
shared = { path = "../shared" }
databeam = { path = "../databeam", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
