[package]
name = "rainbeam-core"
version = "9.0.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Rainbeam backend core"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.83"

[features]
postgres = ["databeam/postgres", "authbeam/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite"]
redis = ["databeam/redis", "authbeam/redis"]
moka = ["databeam/moka", "authbeam/moka"]
oysters = ["databeam/oysters", "authbeam/oysters"]
default = ["databeam/sqlite", "authbeam/sqlite"]

[dependencies]
axum = { version = "0.8.1", features = ["macros", "form"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
reqwest = { version = "0.12.14", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
serde_json = "1.0.140"
regex = "1.11.1"
hcaptcha-no-wasm = { version = "3.0.1" }
ammonia = "4.0.0"
async-recursion = "1.1.1"
tracing = "0.1.41"
rainbeam-shared = "1.0.1"
databeam = { path = "../databeam", version = "2.0.0", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
langbeam = { path = "../langbeam" }
mime_guess = "2.0.5"
pathbufd = "0.1.4"
# pathbufd = { path = "../../../pathbufd" }
carp = { path = "../carp" }

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "rainbeam"
test = false
doctest = true
