[package]
name = "rainbeam-plugins"
version = "0.1.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "WASM plugin loader for Rainbeam"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.83"

[dependencies]
pathbufd = "0.1.4"
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
wasmtime = "30.0.2"
