[package]
name = "rainbeam"
version = "1.13.6"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Ask, share, socialize!"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.81"

[features]
postgres = ["databeam/postgres", "authbeam/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite"]
default = ["databeam/sqlite", "authbeam/sqlite"]
mimalloc = []

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.5", features = ["macros", "form"] }
axum-extra = { version = "0.9.3", features = ["cookie"] }
reqwest = { version = "0.12.5", features = ["json", "stream"] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.14"
tower-http = { version = "0.5.2", features = ["fs", "trace"] }
serde_json = "1.0.120"
regex = "1.10.5"
mime_guess = "2.0.5"
hcaptcha = "2.4.6"
ammonia = "4.0.0"
futures-util = "0.3.30"
tokio-stream = "0.1.15"
futures = "0.3.30"
async-recursion = "1.1.1"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
shared = { path = "../shared" }
databeam = { path = "../databeam", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
mimalloc = "0.1.43"

[[bin]]
path = "src/main.rs"
name = "rainbeam"
test = false
