[package]
name = "rainbeam"
version = "5.0.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Ask, share, socialize!"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.83"

[features]
postgres = ["databeam/postgres", "authbeam/postgres", "rb/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql", "rb/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite", "rb/sqlite"]
default = ["sqlite", "redis"]
mimalloc = ["dep:mimalloc"]
redis = ["databeam/redis", "authbeam/redis", "rb/redis"]
moka = ["databeam/moka", "authbeam/moka", "rb/moka"]

[dependencies]
reva = { version = "0.13.2", features = ["with-axum"] }
reva_axum = "0.5.1"
axum = { version = "0.8.1", features = ["macros", "form"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
reqwest = { version = "0.12.12", features = ["json", "stream"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde_json = "1.0.139"
regex = "1.11.1"
ammonia = "4.0.0"
async-recursion = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rainbeam-shared = { path = "../shared" }
databeam = { version = "1.0.0", default-features = false }
# databeam = { path = "../databeam", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
langbeam = { path = "../langbeam" }
rb = { path = "../rb", default-features = false }
mimalloc = { version = "0.1.43", optional = true }
mime_guess = "2.0.5"
pathbufd = "0.1.4"
# pathbufd = { path = "../../../pathbufd" }
rainbeam-plugins = { path = "../rainbeam-plugins" }

[[bin]]
path = "src/main.rs"
name = "rainbeam"
test = false
