[package]
name = "rb"
version = "1.20.1"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Rainbeam Axum"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.81"

[features]
postgres = ["databeam/postgres", "authbeam/postgres", "rainbeam-core/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql", "rainbeam-core/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite", "rainbeam-core/sqlite"]
default = ["databeam/sqlite", "authbeam/sqlite", "rainbeam-core/sqlite"]
mimalloc = []

[dependencies]
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.9", features = ["macros", "form"] }
axum-extra = { version = "0.9.6", features = ["cookie"] }
reqwest = { version = "0.12.9", features = ["json", "stream"] }
serde = { version = "1.0.216", features = ["derive"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.19"
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
serde_json = "1.0.134"
regex = "1.11.1"
hcaptcha-no-wasm = { version = "3.0.1" }
ammonia = "4.0.0"
futures-util = "0.3.31"
async-recursion = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
rainbeam-shared = { path = "../shared" }
databeam = { version = "0.1.1", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
langbeam = { path = "../langbeam" }
rainbeam-core = { path = "../rainbeam-core", default-features = false }
mimalloc = "0.1.43"
mime_guess = "2.0.5"
citrus-client = { version = "0.1.0" }

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "rb"
test = false
doctest = true
