[package]
name = "rb"
version = "9.0.0"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Rainbeam Axum"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"
rust-version = "1.83"

[features]
postgres = ["databeam/postgres", "authbeam/postgres", "rainbeam-core/postgres"]
mysql = ["databeam/mysql", "authbeam/mysql", "rainbeam-core/mysql"]
sqlite = ["databeam/sqlite", "authbeam/sqlite", "rainbeam-core/sqlite"]
mimalloc = []
redis = ["databeam/redis", "authbeam/redis", "rainbeam-core/redis"]
moka = ["databeam/moka", "authbeam/moka", "rainbeam-core/moka"]
oysters = ["databeam/oysters", "authbeam/oysters", "rainbeam-core/oysters"]
default = ["databeam/sqlite", "authbeam/sqlite", "rainbeam-core/sqlite"]

[dependencies]
reva = { version = "0.13.2", features = ["with-axum"] }
reva_axum = "0.5.1"
axum = { version = "0.8.4", features = ["macros", "form"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
reqwest = { version = "0.12.18", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
toml = "0.8.22"
tower-http = { version = "0.6.4", features = ["fs", "trace"] }
serde_json = "1.0.140"
regex = "1.11.1"
hcaptcha-no-wasm = { version = "3.0.1" }
ammonia = "4.1.0"
async-recursion = "1.1.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# rainbeam-shared = { path = "../shared" }
rainbeam-shared = "1.0.1"
databeam = { path = "../databeam", version = "2.0.0", default-features = false }
authbeam = { path = "../authbeam", default-features = false }
langbeam = { path = "../langbeam" }
rainbeam-core = { path = "../rainbeam-core", default-features = false }
mime_guess = "2.0.5"
pathbufd = "0.1.4"
# pathbufd = { path = "../../../pathbufd" }
carp = { path = "../carp" }

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "rb"
test = false
doctest = true
