[package]
name = "rainbeam-shared"
version = "0.2.1"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Basic utilities"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[dependencies]
ammonia = "4.0.0"
chrono = "0.4.39"
comrak = "0.33.0"
hex_fmt = "0.3.0"
num-bigint = "0.4.6"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
uuid = { version = "1.12.0", features = ["v4"] }

[lib]
doctest = false
