[package]
name = "rainbeam-shared"
version = "1.0.1"
edition = "2021"
authors = ["trisuaso", "swmff"]
description = "Shared utilities for Rainbeam"
homepage = "https://rainbeam.net"
repository = "https://github.com/swmff/rainbeam"
license = "MIT"

[dependencies]
ammonia = "4.0.0"
chrono = "0.4.40"
comrak = "0.36.0"
hex_fmt = "0.3.0"
num-bigint = "0.4.6"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.8"
uuid = { version = "1.16.0", features = ["v4"] }
pathbufd = "0.1.4"
toml = "0.8.20"

[lib]
doctest = false
